Fix horizontal overflow

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,6 +11,8 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 a {
